...
import de.niklasbednarczyk.nbweather.feature.forecast.screens.overview.models.ForecastOverviewHourlyModel
import de.niklasbednarczyk.nbweather.feature.forecast.screens.overview.models.ForecastOverviewItem
import de.niklasbednarczyk.nbweather.feature.forecast.screens.overview.models.ForecastOverviewPrecipitationModel
import de.niklasbednarczyk.nbweather.feature.forecast.screens.overview.models.ForecastOverviewSummaryModel
import de.niklasbednarczyk.nbweather.feature.forecast.screens.overview.models.ForecastOverviewSunAndMoonModel

const val FORECAST_OVERVIEW_ITEM_VIEW_TAG = "ForecastOverviewItemView"

@Composable
fun ForecastOverviewItemView(
    item: ForecastOverviewItem,
    clickableEnabled: Boolean,
    navigateToForecastAlerts: () -> Unit,
...
